CHANGES IN VERSION 1.1.1
-----------------------

NEW FEATURES

    o Modify functions ('xEnricher', 'xEnricherGenes', 'xEnricherSNPs', 'xEnricherYours', 'xGRviaGenomicAnno') enabling two-side p-value calculation

    o Add a new function 'xVisInterpAnimate' for animating irregular data interpolation and visualisation
    
    o Modify 'xDAGpropagate' allowing for keeping all children
    
    o Modify 'xSNP2nGenes' and 'xSNP2GeneScores' allowing for inclusion of a TAD dataset to pre-filter SNP-nGene pairs
    
    o Modify 'xEnrichBarplot', 'xEnrichCompare', 'xVisNet', 'xVisInterp', 'xVisInterpAnimate' and 'xVisEvidence' allowing for inclusion of font family
    
    o Populate the primary source KEGG into 'xEnricherGenes', 'xGRviaGeneAnno', 'xDefineNet', 'xSubneterGenes', 'xSubneterSNPs' and 'xSubneterGR'
    
    o Add a new function 'xCombineNet' for combining networks

    o Modify 'xGR2nGenes' allowing for user-defined 'GR.Gene' (a GR object)
    
    o Modify 'xEnrichDAGplot' only visualising nodes within a user-defined graph (an igraph object)
    
    o Populate annotations (KEGG and REACTOME)

    o Add a new function 'xGraphML' for creating a graphml file

    o Add a new function 'xVolcano' for drawing a volcano plot

	
CHANGES IN VERSION 1.0.10
-----------------------

NEW FEATURES

    o Add a new function 'xVisInterp' for irregular data interpolation and visualisation
    
    o Populate annotations

    o Modify 'xSymbol2GeneID' allowing for converting into gene info
        
    o Define S3 classes ('eTerm')

    o Add a new function 'xDefineNet' for defining built-in network
    
    
CHANGES IN VERSION 1.0.9
-----------------------

NEW FEATURES

    o Add a new function 'xSymbol2GeneID' for converting gene symbols to entrez geneid
    
    o Add a new function 'xDAGpropagate' for propagating annotations
    
    
CHANGES IN VERSION 1.0.8
-----------------------

NEW FEATURES
