@@ -11,7 +11,8 @@
 
 <p><code>xEnricherGenesAdv</code> is supposed to conduct enrichment analysis
 given a list of gene sets and a list of ontologies. It is an advanced
-version of <code>xEnricherGenes</code>.
+version of <code>xEnricherGenes</code>, returning an object of the class
+'ls_eTerm'.
 </p>
 
 
