@@ -189,8 +189,8 @@ RData files. See <code>xRDataLoader</code> for details</p>
 
 <h3>Value</h3>
 
-<p>a data frame with 8 columns (below explanations are based on results at
-the 'hybrid' resolution):
+<p>a data frame with following columns (below explanations are based on
+results at the 'hybrid' resolution):
 </p>
 
 <ul>
@@ -217,6 +217,17 @@ also restricted by this
 </li>
 <li><p><code>adjp</code>: adjusted p-value. It is the p value but after being
 adjusted for multiple comparisons
+</p>
+</li>
+<li><p><code>or</code>: a vector containing odds ratio
+</p>
+</li>
+<li><p><code>CIl</code>: a vector containing lower bound confidence interval
+for the odds ratio
+</p>
+</li>
+<li><p><code>CIu</code>: a vector containing upper bound confidence interval
+for the odds ratio
 </p>
 </li>
 <li><p><code>expProb</code>: the probability of expecting bases overlapped
@@ -701,7 +712,11 @@ xEnrichViewer(eTerm)
 bp &lt;- xEnrichBarplot(eTerm, top_num='auto', displayBy="fc")
 bp
 
-## e) save enrichment results to the file called 'Regions_enrichments.txt'
+## e) forest plot of enriched terms
+gp &lt;- xEnrichForest(eTerm)
+gp
+
+## f) save enrichment results to the file called 'Regions_enrichments.txt'
 output &lt;- xEnrichViewer(eTerm, top_num=length(eTerm$adjp),
 sortBy="adjp", details=TRUE)
 utils::write.table(output, file="Regions_enrichments.txt", sep="\t",
